k8s/apps/ipu/_configs/envoy.yaml
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
    - name: ipu
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ipu
                normalize_path: true
                merge_slashes: true
                path_with_escaped_slashes_action: REJECT_REQUEST
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      log_format:
                        json_format:
                          start_time: "%START_TIME%"
                          method: "%REQ(:METHOD)%"
                          status: "%RESPONSE_CODE%"
                          response_flags: "%RESPONSE_FLAGS%"
                          upstream_cluster: "%UPSTREAM_CLUSTER%"
                          duration_ms: "%DURATION%"
                          bytes_received: "%BYTES_RECEIVED%"
                          bytes_sent: "%BYTES_SENT%"
                route_config:
                  name: ipu
                  virtual_hosts:
                    - name: ipu
                      domains: ["*"]
                      routes:
                        - match:
                            path: /livez
                            headers:
                              - name: ":method"
                                exact_match: GET
                          direct_response:
                            status: 200
                        - match:
                            path: /readyz
                            headers:
                              - name: ":method"
                                exact_match: GET
                          direct_response:
                            status: 200
                        - match:
                            path: /livez
                            headers:
                              - name: ":method"
                                exact_match: HEAD
                          direct_response:
                            status: 200
                        - match:
                            path: /readyz
                            headers:
                              - name: ":method"
                                exact_match: HEAD
                          direct_response:
                            status: 200
                        - match:
                            path: /
                            headers:
                              - name: ":method"
                                exact_match: GET
                          route:
                            cluster: seaweedfs_s3
                            host_rewrite_literal: seaweedfs-default-s3.seaweedfs.svc.cluster.local:8333
                            regex_rewrite:
                              pattern:
                                regex: ^/$
                              substitution: /ipu/index.html
                          request_headers_to_remove: [authorization, cookie]
                        - match:
                            path: /
                            headers:
                              - name: ":method"
                                exact_match: HEAD
                          route:
                            cluster: seaweedfs_s3
                            host_rewrite_literal: seaweedfs-default-s3.seaweedfs.svc.cluster.local:8333
                            regex_rewrite:
                              pattern:
                                regex: ^/$
                              substitution: /ipu/index.html
                          request_headers_to_remove: [authorization, cookie]
                        - match:
                            safe_regex:
                              regex: ^/.+/$
                            headers:
                              - name: ":method"
                                exact_match: GET
                          route:
                            cluster: seaweedfs_s3
                            host_rewrite_literal: seaweedfs-default-s3.seaweedfs.svc.cluster.local:8333
                            regex_rewrite:
                              pattern:
                                regex: ^/(.*)/$
                              substitution: /ipu/\1/index.html
                          request_headers_to_remove: [authorization, cookie]
                        - match:
                            safe_regex:
                              regex: ^/.+/$
                            headers:
                              - name: ":method"
                                exact_match: HEAD
                          route:
                            cluster: seaweedfs_s3
                            host_rewrite_literal: seaweedfs-default-s3.seaweedfs.svc.cluster.local:8333
                            regex_rewrite:
                              pattern:
                                regex: ^/(.*)/$
                              substitution: /ipu/\1/index.html
                          request_headers_to_remove: [authorization, cookie]
                        - match:
                            prefix: /
                            headers:
                              - name: ":method"
                                exact_match: GET
                          route:
                            cluster: seaweedfs_s3
                            host_rewrite_literal: seaweedfs-default-s3.seaweedfs.svc.cluster.local:8333
                            prefix_rewrite: /ipu/
                          request_headers_to_remove: [authorization, cookie]
                        - match:
                            prefix: /
                            headers:
                              - name: ":method"
                                exact_match: HEAD
                          route:
                            cluster: seaweedfs_s3
                            host_rewrite_literal: seaweedfs-default-s3.seaweedfs.svc.cluster.local:8333
                            prefix_rewrite: /ipu/
                          request_headers_to_remove: [authorization, cookie]
                        - match:
                            prefix: /
                          direct_response:
                            status: 405
                            body:
                              inline_string: Method Not Allowed
                          response_headers_to_add:
                            - header:
                                key: allow
                                value: GET, HEAD
                              append_action: OVERWRITE_IF_EXISTS_OR_ADD
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: seaweedfs_s3
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      connect_timeout: 5s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: seaweedfs_s3
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: seaweedfs-default-s3.seaweedfs.svc.cluster.local
                      port_value: 8333
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
          http_filters:
            - name: envoy.filters.http.aws_request_signing
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.aws_request_signing.v3.AwsRequestSigning
                service_name: s3
                region: us-east-1
                use_unsigned_payload: true
                credential_provider:
                  custom_credential_provider_chain: true
                  environment_credential_provider: {}
            - name: envoy.filters.http.upstream_codec
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
